add services section

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Flashcard</title>
+    <title>delani-studio</title>
+    <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro' rel='stylesheet'>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
 </head>
@@ -13,14 +14,31 @@
     <div class="container-fluid no-padding">
         <div class="image img-responsive text-center text-white">
             <div id="mContent">
-                    <img src="assets/logo/logo.png"  id = "mlogo">
-                    <h1 id="welcome"> WELCOME</h1>
-                    <h1 id="mTitle">TO DELANI STUDIO</h1>
-                    <h5>AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT</h5>
-                    <img src="assets/mouse_click.png" id="mouse_click">
+                <img src="assets/logo/logo.png" id="mlogo">
+                <h1 id="welcome"> WELCOME</h1>
+                <h1 id="mTitle">TO DELANI STUDIO</h1>
+                <h5 id="message">AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT</h5>
+                <img src="assets/mouse_click.png" id="mouse_click">
             </div>
-               
+
         </div>
+
+        <section id="about_us">
+            <div id="mabout" class="text-center">
+                <h2><strong>ABOUT US</strong></h2>
+                <div class="container">
+                    <p>When you work with us, you are part of the team of committed collaborators.
+                        All aspects of our software development process are intergrated, iterative and agile.</p>
+                    <p>Our approach unifies design, development and
+                        product management to create exceptional products.</p>
+                    <p>We start each project by understanding your business goals,
+                        the user's needs and the product requirements.</p>
+                    <p>Then we help translate them into effective and elegant solutions.</p>
+
+                </div>
+            </div>
+
+
 
     </div>
     <script src="http://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
