--- a/index.html
+++ b/index.html
@@ -37,6 +37,28 @@
 
                 </div>
             </div>
+        </section>
+        <section id="mservices">
+            <div id="services">
+                <div class="container " id="themessage">
+                    <h2><strong>SERVICES</strong></h2>
+                    <p>Before we sign a contract or write a line of code our team will spend necessary
+                        time to understand your product vision.</p>
+                    <p>The outcome of this scoping session is a proposal of high-level statement of work.</p>
+                    <p>Based on your requirement, we can provide a complete offering or just the pieces
+                        you need.</p>
+                </div>
+            </div>
+        </section>
+        <!-- 
+        <section id="what_we_do">
+            <div class="container">
+                <h2><strong>WHAT WE DO</strong></h2>
+                <div class="row">
+                    div.col.col-lg-4.
+                </div>
+            </div>
+        </section> -->
 
 
 
