--- a/index.html
+++ b/index.html
@@ -50,15 +50,39 @@
                 </div>
             </div>
         </section>
-        <!-- 
+
         <section id="what_we_do">
-            <div class="container">
+            <div class="container-fluid">
                 <h2><strong>WHAT WE DO</strong></h2>
-                <div class="row">
-                    div.col.col-lg-4.
+                <div class="row" id="we_do">
+                    <div class="col col-lg-4 col-md-12 col-sm-12">
+                        <img src="assets/services_icons/design_icon.png" alt="design">
+                        <p id="design-content">
+                            Our design practice offers a full range of services including brand strategy, interaction
+                            and visual design and user experience testing.
+                            Throughout your project, our designers create and implement visual design and workflows,
+                            solicit user feedback and work with you to make sure what gets built is what is needed.
+                        </p>
+                    </div>
+                    <div class="col col-lg-4 col-md-12 col-sm-12">
+                        <img src="assets/services_icons/dev_icon.png" alt="design">
+                        <p id="dev-content">
+                            All engineers are fluent in the latest enterprise, mobile and web development technologies.
+                            They collaborate with your team to write, and improve code on a daily basis, using proven
+                            practices such as test-driven development and pair programming.
+                        </p>
+                    </div>
+                    <div class="col col-lg-4 col-md-12 col-sm-12">
+                        <img src="assets/services_icons/product_icon.png" alt="design">
+                        <p id="product-content">
+                            Planning and development is iterative. Because we are constantly coding and testing, the
+                            products we build are always ready to go live.
+                            This iterative process allows for changes as business requirements evolve.
+                        </p>
+                    </div>
                 </div>
             </div>
-        </section> -->
+        </section>
 
 
 
