--- a/index.html
+++ b/index.html
@@ -84,6 +84,40 @@
             </div>
         </section>
 
+        <section id="portfolio">
+            <div class="container-fluid">
+                <h2><strong>PORTFOLIO</strong></h2>
+                <div class="row first-list" id="">
+                    <div class="col col-lg-3 col-md-6 col-sm-12">
+                        <img src="assets/portfolio/work1.jpg" alt="work1">
+                    </div>
+                    <div class="col col-lg-3 col-md-6 col-sm-12">
+                        <img src="assets/portfolio/work2.jpg" alt="work2">
+                    </div>
+                    <div class="col col-lg-3 col-md-6 col-sm-12">
+                        <img src="assets/portfolio/work3.jpg" alt="work3">
+                    </div>
+                    <div class="col col-lg-3 col-md-6 col-sm-12">
+                        <img src="assets/portfolio/work4.jpg" alt="work4">
+                    </div>
+                </div>
+                <div class="row first-list" id="second-list">
+                    <div class="col col-lg-3 col-md-6 col-sm-12">
+                        <img src="assets/portfolio/work5.jpg" alt="work5">
+                    </div>
+                    <div class="col col-lg-3 col-md-6 col-sm-12">
+                        <img src="assets/portfolio/work6.jpg" alt="work6">
+                    </div>
+                    <div class="col col-lg-3 col-md-6 col-sm-12">
+                        <img src="assets/portfolio/work7.jpg" alt="work7">
+                    </div>
+                    <div class="col col-lg-3 col-md-6 col-sm-12">
+                        <img src="assets/portfolio/work8.jpg" alt="work8">
+                    </div>
+                </div>
+            </div>
+        </section>
+
 
 
     </div>
