add contact section with a form

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <div class="row" id="we_do">
                     <div class="col col-lg-4 col-md-12 col-sm-12">
                         <img src="assets/services_icons/design_icon.png" alt="design">
-                        <p id="design-content">
+                        <p id="design-content" class="hidden-content">
                             Our design practice offers a full range of services including brand strategy, interaction
                             and visual design and user experience testing.
                             Throughout your project, our designers create and implement visual design and workflows,
@@ -66,7 +66,7 @@
                     </div>
                     <div class="col col-lg-4 col-md-12 col-sm-12">
                         <img src="assets/services_icons/dev_icon.png" alt="design">
-                        <p id="dev-content">
+                        <p id="dev-content" class="hidden-content">
                             All engineers are fluent in the latest enterprise, mobile and web development technologies.
                             They collaborate with your team to write, and improve code on a daily basis, using proven
                             practices such as test-driven development and pair programming.
@@ -74,7 +74,7 @@
                     </div>
                     <div class="col col-lg-4 col-md-12 col-sm-12">
                         <img src="assets/services_icons/product_icon.png" alt="design">
-                        <p id="product-content">
+                        <p id="product-content" class="hidden-content">
                             Planning and development is iterative. Because we are constantly coding and testing, the
                             products we build are always ready to go live.
                             This iterative process allows for changes as business requirements evolve.
@@ -117,6 +117,44 @@
                 </div>
             </div>
         </section>
+
+
+        <section id="contact-us">
+            <div id="mcontact" class="text-center">
+                <div class="mForm">
+                    <h2><strong>CONTACT US</strong></h2>
+                    <div class="container">
+                        <form action="" id="conatct-form">
+                            <div class="row">
+                                <div class="col col-lg-6 col-md-6 col-sm-12">
+                                    <form-group>
+                                        <label for="name"></label>
+                                        <input type="text" id="name" value="" class="form-control isInput"
+                                            placeholder="Your Name">
+                                    </form-group>
+                                </div>
+                                <div class="col col-lg-6 col-md-6 col-sm-12">
+                                    <form-group>
+                                        <label for="email"></label>
+                                        <input type="email" id="email" value="" class="form-control isInput"
+                                            placeholder="email">
+                                    </form-group>
+                                </div>
+                                <div class="col col-12">
+                                    <div class="form-group">
+                                        <label for="message"></label>
+                                        <textarea class="form-control isInput" id="message" rows="10" ></textarea>
+                                    </div>
+                                </div>
+                            </div>
+
+                        </form>
+                    </div>
+                </div>
+
+            </div>
+        </section>
+
 
 
 
