add cards to the portfolio section

--- a/index.html
+++ b/index.html
@@ -85,34 +85,58 @@
         </section>
 
         <section id="portfolio">
-            <div class="container-fluid">
+            <div class="container-fluid portfolio">
                 <h2><strong>PORTFOLIO</strong></h2>
                 <div class="row first-list" id="">
                     <div class="col col-lg-3 col-md-6 col-sm-12">
-                        <img src="assets/portfolio/work1.jpg" alt="work1">
+                        <div class="card">
+                            <img src="assets/portfolio/work1.jpg" alt="work1">
+                        </div>
+
                     </div>
                     <div class="col col-lg-3 col-md-6 col-sm-12">
-                        <img src="assets/portfolio/work2.jpg" alt="work2">
+                        <div class="card">
+                            <img src="assets/portfolio/work2.jpg" alt="work2">
+                        </div>
+
                     </div>
                     <div class="col col-lg-3 col-md-6 col-sm-12">
-                        <img src="assets/portfolio/work3.jpg" alt="work3">
+                        <div class="card">
+                            <img src="assets/portfolio/work3.jpg" alt="work3">
+                        </div>
+
                     </div>
                     <div class="col col-lg-3 col-md-6 col-sm-12">
-                        <img src="assets/portfolio/work4.jpg" alt="work4">
+                        <div class="card">
+                            <img src="assets/portfolio/work4.jpg" alt="work4">
+                        </div>
+
                     </div>
                 </div>
                 <div class="row first-list" id="second-list">
                     <div class="col col-lg-3 col-md-6 col-sm-12">
-                        <img src="assets/portfolio/work5.jpg" alt="work5">
+                        <div class="card">
+                            <img src="assets/portfolio/work5.jpg" alt="work5">
+                        </div>
+
                     </div>
                     <div class="col col-lg-3 col-md-6 col-sm-12">
-                        <img src="assets/portfolio/work6.jpg" alt="work6">
+                        <div class="card">
+                            <img src="assets/portfolio/work6.jpg" alt="work6">
+                        </div>
+
                     </div>
                     <div class="col col-lg-3 col-md-6 col-sm-12">
-                        <img src="assets/portfolio/work7.jpg" alt="work7">
+                        <div class="card"> <img src="assets/portfolio/work7.jpg" alt="work7">
+
+                        </div>
+
                     </div>
                     <div class="col col-lg-3 col-md-6 col-sm-12">
-                        <img src="assets/portfolio/work8.jpg" alt="work8">
+                        <div class="card">
+                            <img src="assets/portfolio/work8.jpg" alt="work8">
+                        </div>
+
                     </div>
                 </div>
             </div>
@@ -143,7 +167,8 @@
                                 <div class="col col-12">
                                     <div class="form-group">
                                         <label for="message"></label>
-                                        <textarea class="form-control isInput" id="message" rows="10" ></textarea>
+                                        <textarea class="form-control isInput" id="message" rows="10"
+                                            placeholder="Your message here.."></textarea>
                                     </div>
                                 </div>
                             </div>
@@ -151,6 +176,11 @@
                         </form>
                     </div>
                 </div>
+
+            </div>
+        </section>
+        <section id="social">
+            <div class="msocial">
 
             </div>
         </section>
