add social icons in the social section

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <section id="portfolio">
             <div class="container-fluid portfolio">
                 <h2><strong>PORTFOLIO</strong></h2>
-                <div class="row first-list" id="">
+                <div class="row padding" id="first-list">
                     <div class="col col-lg-3 col-md-6 col-sm-12">
                         <div class="card">
                             <img src="assets/portfolio/work1.jpg" alt="work1">
@@ -112,8 +112,8 @@
                         </div>
 
                     </div>
-                </div>
-                <div class="row first-list" id="second-list">
+                    <!-- </div>
+                <div class="row first-list" id="second-list"> -->
                     <div class="col col-lg-3 col-md-6 col-sm-12">
                         <div class="card">
                             <img src="assets/portfolio/work5.jpg" alt="work5">
@@ -127,7 +127,8 @@
 
                     </div>
                     <div class="col col-lg-3 col-md-6 col-sm-12">
-                        <div class="card"> <img src="assets/portfolio/work7.jpg" alt="work7">
+                        <div class="card">
+                            <img src="assets/portfolio/work7.jpg" alt="work7">
 
                         </div>
 
@@ -148,26 +149,26 @@
                 <div class="mForm">
                     <h2><strong>CONTACT US</strong></h2>
                     <div class="container">
-                        <form action="" id="conatct-form">
+                        <form action="" id="contact-form">
                             <div class="row">
-                                <div class="col col-lg-6 col-md-6 col-sm-12">
-                                    <form-group>
-                                        <label for="name"></label>
+                                <div class="col col-lg-6 col-md-12 col-sm-12">
+                                    <div class="form-group">
+
                                         <input type="text" id="name" value="" class="form-control isInput"
                                             placeholder="Your Name">
-                                    </form-group>
+                                    </div>
                                 </div>
-                                <div class="col col-lg-6 col-md-6 col-sm-12">
-                                    <form-group>
-                                        <label for="email"></label>
+                                <div class="col col-lg-6 col-md-12 col-sm-12">
+                                    <div class="form-group">
+
                                         <input type="email" id="email" value="" class="form-control isInput"
                                             placeholder="email">
-                                    </form-group>
+                                    </div>
                                 </div>
                                 <div class="col col-12">
                                     <div class="form-group">
-                                        <label for="message"></label>
-                                        <textarea class="form-control isInput" id="message" rows="10"
+
+                                        <textarea class="form-control isInput" id="message" rows="10" value=""
                                             placeholder="Your message here.."></textarea>
                                     </div>
                                 </div>
@@ -179,15 +180,29 @@
 
             </div>
         </section>
-        <section id="social">
-            <div class="msocial">
+            <section id="social">
+                <div class="msocial">
+              <div class="container">
+                    <div class="row">
+                            <div class="col-12" id="social-padding">
+                                <img src="assets/social_icons/behance.png" alt="behance">
+                                <img src="assets/social_icons/dribble.png" alt="dribble">
+                                <img src="assets/social_icons/facebook.png" alt="facebook">
+                                <img src="assets/social_icons/flickr.png" alt="flickr">
+                                <img src="assets/social_icons/g_plus.png" alt="g_plus">
+                                <img src="assets/social_icons/pinterest.png" alt="pinterest">
+                                <img src="assets/social_icons/skype.png" alt="skype">
+                                <img src="assets/social_icons/stumble_upon.png" alt="stumble_upon">
+                                <img src="assets/social_icons/twitter.png" alt="twitter">
+                                <img src="assets/social_icons/you_tube.png" alt="you_tube">
+                            </div>
+                        </div>
+                        <h5>DELANI STUDIO </h5>
+                        <h5>2019</h5>
+              </div>
 
-            </div>
-        </section>
-
-
-
-
+                </div>
+            </section>
     </div>
     <script src="http://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
         crossorigin="anonymous"></script>
