--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
                 <h2><strong>WHAT WE DO</strong></h2>
                 <div class="row" id="we_do">
                     <div class="col col-lg-4 col-md-12 col-sm-12">
-                        <img src="assets/services_icons/design_icon.png" alt="design">
+                        <img src="assets/services_icons/design_icon.png" alt="design" id="design">
+                        <h5><strong>DESIGN</strong></h5>
                         <p id="design-content" class="hidden-content">
                             Our design practice offers a full range of services including brand strategy, interaction
                             and visual design and user experience testing.
@@ -65,7 +66,8 @@
                         </p>
                     </div>
                     <div class="col col-lg-4 col-md-12 col-sm-12">
-                        <img src="assets/services_icons/dev_icon.png" alt="design">
+                        <img src="assets/services_icons/dev_icon.png" alt="dev" id="dev">
+                        <h5><strong>DEVELOPMENT</strong></h5>
                         <p id="dev-content" class="hidden-content">
                             All engineers are fluent in the latest enterprise, mobile and web development technologies.
                             They collaborate with your team to write, and improve code on a daily basis, using proven
@@ -73,7 +75,8 @@
                         </p>
                     </div>
                     <div class="col col-lg-4 col-md-12 col-sm-12">
-                        <img src="assets/services_icons/product_icon.png" alt="design">
+                        <img src="assets/services_icons/product_icon.png" alt="product" id="product">
+                        <h5><strong>PRODUCT MANAGEMENT</strong></h5>
                         <p id="product-content" class="hidden-content">
                             Planning and development is iterative. Because we are constantly coding and testing, the
                             products we build are always ready to go live.
@@ -104,16 +107,17 @@
                         <div class="card">
                             <img src="assets/portfolio/work3.jpg" alt="work3">
                         </div>
-
+ 
                     </div>
-                    <div class="col col-lg-3 col-md-6 col-sm-12">
+                    
+                    <div class="col col-lg-3 col-md-6 col-sm-12"> 
                         <div class="card">
                             <img src="assets/portfolio/work4.jpg" alt="work4">
                         </div>
 
                     </div>
-                    <!-- </div>
-                <div class="row first-list" id="second-list"> -->
+                    </div>
+                <div class="row first-list" id="second-list">
                     <div class="col col-lg-3 col-md-6 col-sm-12">
                         <div class="card">
                             <img src="assets/portfolio/work5.jpg" alt="work5">
@@ -151,25 +155,25 @@
                     <div class="container">
                         <form action="" id="contact-form">
                             <div class="row">
-                                <div class="col col-lg-6 col-md-12 col-sm-12">
+                                <div class="col col-12 col-md-12 col-lg-6">
                                     <div class="form-group">
 
                                         <input type="text" id="name" value="" class="form-control isInput"
-                                            placeholder="Your Name">
+                                            placeholder="Name...">
                                     </div>
                                 </div>
-                                <div class="col col-lg-6 col-md-12 col-sm-12">
+                                <div class="col col-12 col-md-12 col-lg-6">
                                     <div class="form-group">
 
                                         <input type="email" id="email" value="" class="form-control isInput"
-                                            placeholder="email">
+                                            placeholder="Email...">
                                     </div>
                                 </div>
                                 <div class="col col-12">
                                     <div class="form-group">
 
                                         <textarea class="form-control isInput" id="message" rows="10" value=""
-                                            placeholder="Your message here.."></textarea>
+                                            placeholder="Your message here..."></textarea>
                                     </div>
                                 </div>
                             </div>
