add portfolio project heading

--- a/index.html
+++ b/index.html
@@ -93,26 +93,30 @@
                 <div class="row padding" id="first-list">
                     <div class="col col-lg-3 col-md-6 col-sm-12">
                         <div class="card">
-                            <img src="assets/portfolio/work1.jpg" alt="work1">
+                            <img src="assets/portfolio/work1.jpg" alt="work1" id="work1-image">
+                            <h2 id="work1" class="work-heading">WORK 1</h2>
                         </div>
 
                     </div>
                     <div class="col col-lg-3 col-md-6 col-sm-12">
                         <div class="card">
-                            <img src="assets/portfolio/work2.jpg" alt="work2">
+                            <img src="assets/portfolio/work2.jpg" alt="work2" id="work2-image">
+                            <h2 id="work2" class="work-heading">WORK 2</h2>
                         </div>
 
                     </div>
                     <div class="col col-lg-3 col-md-6 col-sm-12">
                         <div class="card">
-                            <img src="assets/portfolio/work3.jpg" alt="work3">
+                            <img src="assets/portfolio/work3.jpg" alt="work3" id="work3-image">
+                            <h2 id="work3" class="work-heading">WORK 3</h2>
                         </div>
  
                     </div>
                     
                     <div class="col col-lg-3 col-md-6 col-sm-12"> 
                         <div class="card">
-                            <img src="assets/portfolio/work4.jpg" alt="work4">
+                            <img src="assets/portfolio/work4.jpg" alt="work4" id="work4-image">
+                            <h2 id="work4" class="work-heading">WORK 4</h2>
                         </div>
 
                     </div>
@@ -120,26 +124,30 @@
                 <div class="row first-list" id="second-list">
                     <div class="col col-lg-3 col-md-6 col-sm-12">
                         <div class="card">
-                            <img src="assets/portfolio/work5.jpg" alt="work5">
+                            <img src="assets/portfolio/work5.jpg" alt="work5" id="work5-image">
+                            <h2 id="work5" class="work-heading"></h2>
                         </div>
 
                     </div>
                     <div class="col col-lg-3 col-md-6 col-sm-12">
                         <div class="card">
-                            <img src="assets/portfolio/work6.jpg" alt="work6">
+                            <img src="assets/portfolio/work6.jpg" alt="work6" id="work6-image">
+                            <h2 id="work6" class="work-heading"></h2>
                         </div>
 
                     </div>
                     <div class="col col-lg-3 col-md-6 col-sm-12">
                         <div class="card">
-                            <img src="assets/portfolio/work7.jpg" alt="work7">
+                            <img src="assets/portfolio/work7.jpg" alt="work7" id="work7-image">
+                            <h2 id="work7" class="work-heading"></h2>
 
                         </div>
 
                     </div>
                     <div class="col col-lg-3 col-md-6 col-sm-12">
                         <div class="card">
-                            <img src="assets/portfolio/work8.jpg" alt="work8">
+                            <img src="assets/portfolio/work8.jpg" alt="work8" id="work8-image">
+                            <h2 id="work8" class="work-heading"></h2>
                         </div>
 
                     </div>
