removed bugs in the card, and add images

--- a/index.html
+++ b/index.html
@@ -91,63 +91,62 @@
             <div class="container-fluid portfolio">
                 <h2><strong>PORTFOLIO</strong></h2>
                 <div class="row padding" id="first-list">
-                    <div class="col col-lg-3 col-md-6 col-sm-12">
-                        <div class="card">
-                            <img src="assets/portfolio/work1.jpg" alt="work1" id="work1-image">
-                            <h2 id="work1" class="work-heading">WORK 1</h2>
+                    <div class="col col-lg-3 col-md-6 col-12">
+                        <div class="card text-center" id="work1">
+                            <img src="assets/portfolio/work1.jpg" class="img-fluid " alt="work 1">
+                            <h2 class="work-heading  text-center" id="work1-title">PROJECT ONE</h2>
+                        </div>
+                    </div>
+
+                    <div class="col col-lg-3 col-md-6 col-12">
+                        <div class="card text-center" id="work2">
+                                <img src="assets/portfolio/work2.jpg" class="img-fluid " alt="work 2">
+                                <h2 class="work-heading  text-center" id="work2-title">PROJECT TWO</h2>
+                        </div>
+                    </div>
+
+
+                    <div class="col col-lg-3 col-md-6 col-12">
+                        <div class="card text-center" id="work3">
+                                <img src="assets/portfolio/work3.jpg" class="img-fluid " alt="work 3">
+                                <h2 class="work-heading  text-center" id="work3-title">PROJECT THREE</h2>
                         </div>
 
                     </div>
-                    <div class="col col-lg-3 col-md-6 col-sm-12">
-                        <div class="card">
-                            <img src="assets/portfolio/work2.jpg" alt="work2" id="work2-image">
-                            <h2 id="work2" class="work-heading">WORK 2</h2>
+
+                    <div class="col col-lg-3 col-md-6 col-12">
+                        <div class="card text-center" id="work4">
+                                <img src="assets/portfolio/work4.jpg" class="img-fluid " alt="work 4">
+                                <h2 class="work-heading  text-center" id="work4-title">PROJECT FOUR</h2>
                         </div>
 
                     </div>
-                    <div class="col col-lg-3 col-md-6 col-sm-12">
-                        <div class="card">
-                            <img src="assets/portfolio/work3.jpg" alt="work3" id="work3-image">
-                            <h2 id="work3" class="work-heading">WORK 3</h2>
-                        </div>
- 
-                    </div>
-                    
-                    <div class="col col-lg-3 col-md-6 col-sm-12"> 
-                        <div class="card">
-                            <img src="assets/portfolio/work4.jpg" alt="work4" id="work4-image">
-                            <h2 id="work4" class="work-heading">WORK 4</h2>
-                        </div>
-
-                    </div>
-                    </div>
+                </div>
                 <div class="row first-list" id="second-list">
-                    <div class="col col-lg-3 col-md-6 col-sm-12">
-                        <div class="card">
-                            <img src="assets/portfolio/work5.jpg" alt="work5" id="work5-image">
-                            <h2 id="work5" class="work-heading"></h2>
+                    <div class="col col-lg-3 col-md-6 col-12">
+                        <div class="card text-center" id="work5">
+                                <img src="assets/portfolio/work5.jpg" class="img-fluid " alt="work 5">
+                                <h2 class="work-heading  text-center" id="work5-title">PROJECT FIVE</h2>
+                            </div>
+                        </div>
+                    <div class="col col-lg-3 col-md-6 col-12">
+                        <div class="card text-center" id="work6">
+                                <img src="assets/portfolio/work6.jpg" class="img-fluid " alt="work 6">
+                                <h2 class="work-heading  text-center" id="work6-title">PROJECT SIX</h2>
+                            </div>
+                        </div>
+
+                    <div class="col col-lg-3 col-md-6 col-12">
+                        <div class="card text-center" id="work7">
+                                <img src="assets/portfolio/work7.jpg" class="img-fluid " alt="work 7">
+                                <h2 class="work-heading  text-center" id="work7-title">PROJECT SEVEN</h2>
                         </div>
 
                     </div>
-                    <div class="col col-lg-3 col-md-6 col-sm-12">
-                        <div class="card">
-                            <img src="assets/portfolio/work6.jpg" alt="work6" id="work6-image">
-                            <h2 id="work6" class="work-heading"></h2>
-                        </div>
-
-                    </div>
-                    <div class="col col-lg-3 col-md-6 col-sm-12">
-                        <div class="card">
-                            <img src="assets/portfolio/work7.jpg" alt="work7" id="work7-image">
-                            <h2 id="work7" class="work-heading"></h2>
-
-                        </div>
-
-                    </div>
-                    <div class="col col-lg-3 col-md-6 col-sm-12">
-                        <div class="card">
-                            <img src="assets/portfolio/work8.jpg" alt="work8" id="work8-image">
-                            <h2 id="work8" class="work-heading"></h2>
+                    <div class="col col-lg-3 col-md-6 col-12">
+                        <div class="card  text-center" id="work8">
+                                <img src="assets/portfolio/work8.jpg" class="img-fluid " alt="work 8">
+                                <h2 class="work-heading  text-center" id="work8-title">PROJECT EIGHT</h2>
                         </div>
 
                     </div>
@@ -192,29 +191,29 @@
 
             </div>
         </section>
-            <section id="social">
-                <div class="msocial">
-              <div class="container">
+        <section id="social">
+            <div class="msocial">
+                <div class="container">
                     <div class="row">
-                            <div class="col-12" id="social-padding">
-                                <img src="assets/social_icons/behance.png" alt="behance">
-                                <img src="assets/social_icons/dribble.png" alt="dribble">
-                                <img src="assets/social_icons/facebook.png" alt="facebook">
-                                <img src="assets/social_icons/flickr.png" alt="flickr">
-                                <img src="assets/social_icons/g_plus.png" alt="g_plus">
-                                <img src="assets/social_icons/pinterest.png" alt="pinterest">
-                                <img src="assets/social_icons/skype.png" alt="skype">
-                                <img src="assets/social_icons/stumble_upon.png" alt="stumble_upon">
-                                <img src="assets/social_icons/twitter.png" alt="twitter">
-                                <img src="assets/social_icons/you_tube.png" alt="you_tube">
-                            </div>
+                        <div class="col-12" id="social-padding">
+                            <img src="assets/social_icons/behance.png" alt="behance">
+                            <img src="assets/social_icons/dribble.png" alt="dribble">
+                            <img src="assets/social_icons/facebook.png" alt="facebook">
+                            <img src="assets/social_icons/flickr.png" alt="flickr">
+                            <img src="assets/social_icons/g_plus.png" alt="g_plus">
+                            <img src="assets/social_icons/pinterest.png" alt="pinterest">
+                            <img src="assets/social_icons/skype.png" alt="skype">
+                            <img src="assets/social_icons/stumble_upon.png" alt="stumble_upon">
+                            <img src="assets/social_icons/twitter.png" alt="twitter">
+                            <img src="assets/social_icons/you_tube.png" alt="you_tube">
                         </div>
-                        <h5>DELANI STUDIO </h5>
-                        <h5>2019</h5>
-              </div>
-
+                    </div>
+                    <h5>DELANI STUDIO </h5>
+                    <h5>2019</h5>
                 </div>
-            </section>
+
+            </div>
+        </section>
     </div>
     <script src="http://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
         crossorigin="anonymous"></script>
