link offline jquery

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </section>
 
         <section id="what_we_do">
-            <div class="container-fluid">
+            <div class="container-fluid portfolio">
                 <h2><strong>WHAT WE DO</strong></h2>
                 <div class="row" id="we_do">
                     <div class="col col-lg-4 col-md-12 col-sm-12">
@@ -215,8 +215,9 @@
             </div>
         </section>
     </div>
-    <script src="http://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
-        crossorigin="anonymous"></script>
+    <!-- <script src="http://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
+        crossorigin="anonymous"></script> -->
+        <script src="js/jquery-3.4.1-compressed.js"></script>
     <script src="js/scripts.js"></script>
 </body>
 
