add names to the input fields that responds to the api requirenment in the dashboard

--- a/index.html
+++ b/index.html
@@ -100,24 +100,24 @@
 
                     <div class="col col-lg-3 col-md-6 col-12">
                         <div class="card text-center" id="work2">
-                                <img src="assets/portfolio/work2.jpg" class="img-fluid " alt="work 2">
-                                <h2 class="work-heading  text-center" id="work2-title">PROJECT TWO</h2>
+                            <img src="assets/portfolio/work2.jpg" class="img-fluid " alt="work 2">
+                            <h2 class="work-heading  text-center" id="work2-title">PROJECT TWO</h2>
                         </div>
                     </div>
 
 
                     <div class="col col-lg-3 col-md-6 col-12">
                         <div class="card text-center" id="work3">
-                                <img src="assets/portfolio/work3.jpg" class="img-fluid " alt="work 3">
-                                <h2 class="work-heading  text-center" id="work3-title">PROJECT THREE</h2>
+                            <img src="assets/portfolio/work3.jpg" class="img-fluid " alt="work 3">
+                            <h2 class="work-heading  text-center" id="work3-title">PROJECT THREE</h2>
                         </div>
 
                     </div>
 
                     <div class="col col-lg-3 col-md-6 col-12">
                         <div class="card text-center" id="work4">
-                                <img src="assets/portfolio/work4.jpg" class="img-fluid " alt="work 4">
-                                <h2 class="work-heading  text-center" id="work4-title">PROJECT FOUR</h2>
+                            <img src="assets/portfolio/work4.jpg" class="img-fluid " alt="work 4">
+                            <h2 class="work-heading  text-center" id="work4-title">PROJECT FOUR</h2>
                         </div>
 
                     </div>
@@ -125,28 +125,28 @@
                 <div class="row first-list" id="second-list">
                     <div class="col col-lg-3 col-md-6 col-12">
                         <div class="card text-center" id="work5">
-                                <img src="assets/portfolio/work5.jpg" class="img-fluid " alt="work 5">
-                                <h2 class="work-heading  text-center" id="work5-title">PROJECT FIVE</h2>
-                            </div>
+                            <img src="assets/portfolio/work5.jpg" class="img-fluid " alt="work 5">
+                            <h2 class="work-heading  text-center" id="work5-title">PROJECT FIVE</h2>
                         </div>
+                    </div>
                     <div class="col col-lg-3 col-md-6 col-12">
                         <div class="card text-center" id="work6">
-                                <img src="assets/portfolio/work6.jpg" class="img-fluid " alt="work 6">
-                                <h2 class="work-heading  text-center" id="work6-title">PROJECT SIX</h2>
-                            </div>
+                            <img src="assets/portfolio/work6.jpg" class="img-fluid " alt="work 6">
+                            <h2 class="work-heading  text-center" id="work6-title">PROJECT SIX</h2>
                         </div>
+                    </div>
 
                     <div class="col col-lg-3 col-md-6 col-12">
                         <div class="card text-center" id="work7">
-                                <img src="assets/portfolio/work7.jpg" class="img-fluid " alt="work 7">
-                                <h2 class="work-heading  text-center" id="work7-title">PROJECT SEVEN</h2>
+                            <img src="assets/portfolio/work7.jpg" class="img-fluid " alt="work 7">
+                            <h2 class="work-heading  text-center" id="work7-title">PROJECT SEVEN</h2>
                         </div>
 
                     </div>
                     <div class="col col-lg-3 col-md-6 col-12">
                         <div class="card  text-center" id="work8">
-                                <img src="assets/portfolio/work8.jpg" class="img-fluid " alt="work 8">
-                                <h2 class="work-heading  text-center" id="work8-title">PROJECT EIGHT</h2>
+                            <img src="assets/portfolio/work8.jpg" class="img-fluid " alt="work 8">
+                            <h2 class="work-heading  text-center" id="work8-title">PROJECT EIGHT</h2>
                         </div>
 
                     </div>
@@ -160,28 +160,28 @@
                 <div class="mForm">
                     <h2><strong>CONTACT US</strong></h2>
                     <div class="container">
-                        <form action="" id="contact-form">
+                        <form action="" class="contact" id="contact-form">
                             <div class="row">
                                 <div class="col col-12 col-md-12 col-lg-6">
                                     <div class="form-group">
-
-                                        <input type="text" id="name" value="" class="form-control isInput"
-                                            placeholder="Name...">
+                                        <input type="text" id="name" name="NAME" value=""
+                                            class="form-control isInput required" placeholder="Name..">
                                     </div>
                                 </div>
                                 <div class="col col-12 col-md-12 col-lg-6">
                                     <div class="form-group">
-
-                                        <input type="email" id="email" value="" class="form-control isInput"
-                                            placeholder="Email...">
+                                        <input type="email" id="email" name="EMAIL" value=""
+                                            class="form-control isInput required" placeholder="Email...">
                                     </div>
                                 </div>
                                 <div class="col col-12">
                                     <div class="form-group">
-
-                                        <textarea class="form-control isInput" id="message" rows="10" value=""
-                                            placeholder="Your message here..."></textarea>
+                                        <textarea class="form-control isInput required" name="MESSAGE" id="message"
+                                            rows="10" value="" placeholder="Your message here..."></textarea>
                                     </div>
+                                </div>
+                                <div class="form-group">
+                                    <input type="submit" class="btn btn-primary btn-lg float-left">
                                 </div>
                             </div>
 
@@ -217,7 +217,7 @@
     </div>
     <!-- <script src="http://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
         crossorigin="anonymous"></script> -->
-        <script src="js/jquery-3.4.1-compressed.js"></script>
+    <script src="js/jquery-3.4.1-compressed.js"></script>
     <script src="js/scripts.js"></script>
 </body>
 
