--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
             </div>
         </section>
     </div>
-    <script src="http://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
+    <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
         crossorigin="anonymous"></script>
     <!-- <script src="js/jquery-3.4.1-compressed.js"></script> -->
     <script src="js/scripts.js"></script>
