--- a/index.html
+++ b/index.html
@@ -215,9 +215,9 @@
             </div>
         </section>
     </div>
-    <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
-        crossorigin="anonymous"></script>
-    <!-- <script src="js/jquery-3.4.1-compressed.js"></script> -->
+    <!-- <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
+        crossorigin="anonymous"></script> -->
+    <script src="js/jquery-3.4.1-compressed.js"></script>
     <script src="js/scripts.js"></script>
 </body>
 
