--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
+<!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -220,5 +220,4 @@
     <script src="js/jquery-3.4.1-compressed.js"></script>
     <script src="js/scripts.js"></script>
 </body>
-
 </html>
